--- a/PeR_git-hub/index.html
+++ b/PeR_git-hub/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 
-//aaa
-
 <html lang=“pt-br”>
 
 <head>
 
-<title>Título da página</title>
+<title>Fanpage de Gatinhos</title>
 
 <meta charset=“utf-8”>
 
@@ -14,7 +12,9 @@
 
 <body>
 
-<h1>Aqui vai um título</h1>
+<h1>Perfil #catsoninstagram</h1>
+
+<img src=“images/fantasias-engracadas-para-cachorros.jpg” />
 
 </body>
 
