--- a/PeR_git-hub/index.html
+++ b/PeR_git-hub/index.html
@@ -14,7 +14,7 @@
 
 <h1>Perfil #catsoninstagram</h1>
 
-<img src=“PeR_git-hub\imagens\fantasias-engracadas-para-cachorros.jpg”>
+<img src="imagens/cachorro.jpg" alt="Cachorro">
 
 </body>
 
